Update GlobalExceptionHandler.java